# mod_vm_detect

./: .gitignore  CMakeLists.txt  README.md  fireredvad.c  fireredvad.h  mod_vm_detect.c  mod_vm_detect.h  vm_detect.conf.xml
src/wav2vec/: bench_concurrent.c  main.c  sgemm.c  sgemm.h  test_concurrent.c  wav2vec_vm.c  wav2vec_vm.h
tools/: extract_weights.py  prep_audio.py  requirements.txt
tools/samples/human/: tim-griffith-messages-01.f32  tim-griffith-messages-02.f32
tools/samples/voicemail/: Dial_and_Complain.f32  Dinner_For_Two.f32  Doo-Wop_Dudes.f32  Dr_Feel_Good.f32  The_Hard_Boiled_Private_Eye.f32  The_Rap_Master_Machine.f32
